fixed layout issues

--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -1,13 +1,9 @@
   /*Added position and width for responsiveness*/
-#map {
-  height: 100%;
+#map { 
   width: auto;
   position: relative;
-}
-
-/*Added float to title*/p
-.title {
-    float: top;
+  height:100vh;
+  min-height:100vh;
 }
 
 html, body {
@@ -29,10 +25,9 @@ input {
 }
 
 #over-map {
-    position: fixed;
+    position: relative;
     margin: 0 auto;
     margin-top: 50px;
-
     width: auto;
     height: auto;
     top: 10%;
@@ -40,8 +35,9 @@ input {
     z-index: 99;
 }
 .color-change{
-    background-color: #8bc7d8;
+    background-image: url(bush.png);
     padding: 20px 0;
+ 
 }
 .center-it { 
     margin-right: auto;
@@ -52,8 +48,13 @@ input {
     margin:auto 0;
     font-weight: 700;
     font-size: 30px;
+    color:white;
+    text-shadow: 2px 2px black;
 }
-
+.display-test{
+    z-index:1000;
+    position:absolute;
+}
 .spacing-header{
     padding:0;
 }
@@ -62,7 +63,9 @@ input {
     left: 0;
     bottom: 0;
     width: 100%;
-    color:black;
+    color:white;
+    text-shadow: 2px 2px black;
+    font-weight: 700;
     text-align: center;
     margin-bottom: 0;
     padding-top:20px;
@@ -94,7 +97,7 @@ input {
 .sidebar {
     width: 30%;
     height: 100%;
-    background-color: rgba(5, 150, 182, 0.3);
+    background-color: #EFEFEF; 
     transition: 1s ease;
     position: relative;
 }
